--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index document</title>
+    <title>Welcome to my Portfolio</title>
 </head>
 <body>
+    <h1>Some of my recent projects are listed below</h1>
     
 </body>
 </html>
