--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Welcome to my Portfolio</title>
 </head>
 <body>
-    <h1>Some of my recent projects are listed below</h1>
+    <h1>Welcome to my Portfolio</h1>
+    <h2>Some of my recent projects are listed below</h2>
     
 </body>
 </html>
