--- a/index.html
+++ b/index.html
@@ -1,13 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to my Portfolio</title>
+    <title>Your Name - Developer Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Welcome to my Portfolio</h1>
-    <h2>Some of my recent projects are listed below</h2>
-    
-</body>
+    <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Portfolio Website</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+<section >
+    <div class="introduction" id="about">
+        <h1>SUKHNOOR BAJAJ</h1>
+        <p>Hi! I am Sukhnoor Bajaj, currently studying at Indian School of Design and Innovation. This is my portfolio website, showcasing my work.</p>
+    </div>
+</section>
+</header>
+<section class="projects" id="projects">
+    <div class="container mt-5">
+        <div class="row">
+            <a href="figma.html">
+            <div class="col-md-5">
+                <img src="images/f1 (2).png" alt="Image 1" class="img-fluid">
+            </a>
+            </div>
+            </div>
+            <div class="row">
+            <div class="col-md-5">
+                <img src="images/history book mockup.jpeg" alt="Image 2" class="img-fluid">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
+                <img src="images/brochure.jpeg" alt="Image 3" class="img-fluid">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
+                <img src="images/traviss cereal box front.jpeg" alt="Image 2" class="img-fluid">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
+                <img src="images/traviss cereal box back.jpeg" alt="Image 2" class="img-fluid">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
+                <img src="images/vinyl cover.jpeg" alt="Image 2" class="img-fluid">
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
+    <section id="contact" class="contact">
+        <div class="container">
+            <h1>Contact Me</h1>
+            <div class="contact-info">
+                <div class="contact-item">
+                    <h2>7252829013</h2>
+
+                </div>
+                <div class="contact-item">
+                    <h2>Email: Sukhnoorbajaj@gmail.com</h2>
+
+                </div>
+            </div>
+        </div>
+    </section>
+</footer>
 </html>
